--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,10 @@ default = ["leveldb-sys/snappy"]
 name = "leveldb"
 
 [dependencies]
-
 db-key = "0.0.5"
 libc = "0.2.4"
+leveldb-sys = { git = "https://github.com/yt0223/leveldb-sys" }
 
-[dependencies.leveldb-sys]
-version = "2.0.0"
 
 [dev-dependencies]
 tempdir = "0.3.4"
